updated images for how it works

--- a/stereochip/app/index.html
+++ b/stereochip/app/index.html
@@ -38,7 +38,7 @@
             </div>
             <div ng-click="ctrl.searchButton()">
                 <div flex></div>
-                <h2 class="mainPhrase">"Super powers for your band! </br> Get more shows, fans, partners and become profitable!"</h2>
+                <h2 class="mainPhrase">"Super powers for your band! </br> Get more shows, fans, partners and revenues!"</h2>
                 <md-button href="https://stereochip.typeform.com/to/wFKUU9" class="mainButton">Apply Here!</md-button>
                 <div flex></div>
             </div>
@@ -58,24 +58,28 @@
 
             <section class="shadeSection">
                 <h2>1. Band application.</h2>
-                <p>Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum</p>
+                <div class="image howItWorks1"></div>
             </section>
 
             <section class="">
                 <h2>2. Design strategy.</h2>
-                <p>Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum</p>
+                <div class="image howItWorks2"></div>
             </section>
 
             <section class="shadeSection">
                 <h2>3. Strategy implementation.</h2>
-                <p>Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum</p>
+                <div class="image howItWorks3"></div>
             </section>
 
             <section class="">
                 <h2>4. Let's make God David Bowie be proud of you.</h2>
-                <p>Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum</p>
+                <div class="image howItWorks4"></div>
             </section>
 
+        </div>
+
+        <div class="bandApplication">
+            
         </div>
 
 
