updated  how it works

--- a/stereochip/app/index.html
+++ b/stereochip/app/index.html
@@ -56,22 +56,22 @@
 
 
 
-            <section class="shadeSection">
+            <section>
                 <h2>1. Band application.</h2>
                 <div class="image howItWorks1"></div>
             </section>
 
-            <section class="">
+            <section class="right">
                 <h2>2. Design strategy.</h2>
                 <div class="image howItWorks2"></div>
             </section>
 
-            <section class="shadeSection">
+            <section>
                 <h2>3. Strategy implementation.</h2>
                 <div class="image howItWorks3"></div>
             </section>
 
-            <section class="">
+            <section class="right">
                 <h2>4. Let's make God David Bowie be proud of you.</h2>
                 <div class="image howItWorks4"></div>
             </section>
