--- a/stereochip/app/index.html
+++ b/stereochip/app/index.html
@@ -31,7 +31,7 @@
             </md-toolbar-tools>
             <!-- Content -->
             <div>
-                <h1 class="mainTitle">StereoChip</h1>
+                <h1 class="mainTitle">stereochip</h1>
                 <div layout="row" layout-align="center center" style="height: 300px;">
                     <div class="logo"></div>                        
                 </div>  
@@ -55,26 +55,30 @@
             </div>
 
 
+            <div class="container" layout="row">
 
-            <section>
-                <h2>1. Band application.</h2>
-                <div class="image howItWorks1"></div>
-            </section>
+                <section>
+                    <h2>1. Band application.</h2>
+                    <div class="image howItWorks1"></div>
+                </section>
 
-            <section class="right">
-                <h2>2. Design strategy.</h2>
-                <div class="image howItWorks2"></div>
-            </section>
+                <section>
+                    <h2>2. Design strategy.</h2>
+                    <div class="image howItWorks2"></div>
+                </section>
 
-            <section>
-                <h2>3. Strategy implementation.</h2>
-                <div class="image howItWorks3"></div>
-            </section>
+                <section>
+                    <h2>3. Strategy implementation.</h2>
+                    <div class="image howItWorks3"></div>
+                </section>
 
-            <section class="right">
-                <h2>4. Let's make God David Bowie be proud of you.</h2>
-                <div class="image howItWorks4"></div>
-            </section>
+                <section>
+                    <h2>4. Let's make God David Bowie be proud of you.</h2>
+                    <div class="image howItWorks4"></div>
+                </section>
+                
+            </div>
+
 
         </div>
 
