updating landing page

--- a/stereochip/app/index.html
+++ b/stereochip/app/index.html
@@ -41,6 +41,7 @@
                 <h2 class="mainPhrase">"Super powers for your band! </br> Get more shows, fans, partners and revenues!"</h2>
                 <md-button href="https://stereochip.typeform.com/to/wFKUU9" class="mainButton">Apply Here!</md-button>
                 <div flex></div>
+                <div class="rocket"></div>
             </div>
             <!-- Footer -->
             <md-content class="smallText" layout="row" layout-align="center center">
