updated artist discovery

--- a/stereochip/app/index.html
+++ b/stereochip/app/index.html
@@ -20,7 +20,7 @@
                 <!-- Top bar -->
                 <md-toolbar class="menu" layout="row">
                     <div flex></div>
-                    <md-button class="md-raised">Artist discovery</md-button>
+                    <md-button href="artistDiscovery.html" class="md-raised">Artist discovery</md-button>
                     <md-button class="md-raised">Partners</md-button>
                     <md-button class="md-raised">Fans craving</md-button>
                     <md-button class="md-raised">Packages</md-button>
