--- a/stereochip/app/index.html
+++ b/stereochip/app/index.html
@@ -36,7 +36,7 @@
                     <div class="logo"></div>                        
                 </div>  
             </div>
-            <div ng-click="ctrl.searchButton()">
+            <div>
                 <div flex></div>
                 <h2 class="mainPhrase">"Super powers for your band! </br> Get more shows, fans, partners and revenues!"</h2>
                 <md-button href="https://stereochip.typeform.com/to/wFKUU9" class="mainButton">Apply Here!</md-button>
