--- a/stereochip/app/artistDiscovery.html
+++ b/stereochip/app/artistDiscovery.html
@@ -76,6 +76,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.0-rc.2/angular-messages.js"></script>
 
     <script src="../../node_modules/angular-route/angular-route.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.0/angular-route.js"></script>
 
     <!-- Angular material  --> 
     <script src="../../node_modules/angular-material/angular-material.js"></script>
